FixedToolbar: Added extension with browser specific workarounds Fixed: #3748 Android 2.x: Page transitions broken when fixed toolbars used #4113 Header and footer change their position after keyboard popup - iOS #4250 Persistent footer instability in v1.1 with long select lists in Android 2.3.3 #4259 Fixed toolbars change position when navigating between tabs. #4337 Fixed header problem after scrolling content on iOS and Android ##4410 Footer navbar moves up when clicking on a textbox in an Android environment

--- a/css/structure/jquery.mobile.fixedToolbar.css
+++ b/css/structure/jquery.mobile.fixedToolbar.css
@@ -49,3 +49,17 @@
 .ui-footer-fixed .ui-btn { 
 	z-index: 10;
 }
+.ui-ios-footer-fix {
+	position: fixed;
+	bottom: 0;
+}
+.ui-android-2x-fixed .ui-li-has-thumb {
+	-webkit-transform: translate3d(0,0,0);
+}
+.ui-ios-footer-fix {
+	position: fixed;
+	bottom: 0;
+}
+.ui-android-2x-fixed .ui-li-has-thumb {
+	-webkit-transform: translate3d(0,0,0);
+}
